CRITICAL FIX: Add CSP headers and comprehensive debugging for GitHub Pages - Fixed script-src and CSP directives to resolve JavaScript blocking issues

--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Our Ethereal Wedding</title>
+    
+    <!-- Content Security Policy for GitHub Pages -->
+    <meta http-equiv="Content-Security-Policy" content="
+      default-src 'self'; 
+      script-src 'self' 'unsafe-inline' 'unsafe-eval' blob: data: https:; 
+      style-src 'self' 'unsafe-inline' https:; 
+      img-src 'self' data: https: blob:; 
+      font-src 'self' https: data:; 
+      connect-src 'self' https: wss: blob:;
+      worker-src 'self' blob:;
+      child-src 'self' blob:;
+      object-src 'none';
+      base-uri 'self';
+    ">
     
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
